# lsassDumper

./: .gitignore  CMakeLists.txt  README.md
include/: LsassDumper.h
src/: LsassDumper.cpp  main.cpp
